<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ffbutton="http://schemas.android.com/apk/res-auto"
    tools:context="com.bigapps.doga.contactshot.MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/kisi"
        android:id="@+id/mcontact_tv"
        android:textAlignment="center"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/numara"
        android:id="@+id/mnumber_tv"
        android:textAlignment="center"
        android:visibility="invisible"
        android:layout_below="@+id/mcontact_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mmesaj"
        android:id="@+id/mmsg_tv"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/mnumber_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/msg_et"
        android:inputType="text"
        android:layout_below="@+id/mmsg_tv"
        android:layout_alignParentLeft="true" />

    <info.hoang8f.widget.FButton
        ffbutton:buttonColor="@color/ColorPrimary"
        ffbutton:shadowColor="@color/ColorPrimaryDark"
        ffbutton:shadowEnabled="true"
        ffbutton:shadowHeight="5dp"
        ffbutton:cornerRadius="5dp"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/RandomKisi"
        android:id="@+id/mrandomara_btn"
        android:layout_marginBottom="144dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="false"
        fontPath="fonts/beyond_the_mountains.ttf"
        />

    <info.hoang8f.widget.FButton
        ffbutton:buttonColor="@color/ColorPrimary"
        ffbutton:shadowEnabled="true"
        ffbutton:shadowHeight="5dp"
        ffbutton:cornerRadius="5dp"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/gonder"
        android:id="@+id/gonder_btn"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_alignTop="@+id/mrandomara_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp"
        android:textAllCaps="false"
        fontPath="fonts/beyond_the_mountains.ttf"
        ffbutton:shadowColor="@color/ColorPrimaryDark" />

</RelativeLayout>